--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: tfplan
+
+#ignore secret files
+*.key
+*.ppk
+*.pem
